--- a/output/index.html
+++ b/output/index.html
@@ -35,10 +35,9 @@
 										<nav id="nav">
 											<ul>
  													<li>
-		                   				 <a href="./pages/about-us.html">About Us</a>&nbsp;
 		                   				 <a href="./pages/wedding-registry.html">Wedding Registry</a>&nbsp;
 		                   				 <a href="./pages/rsvp.html">RSVP</a>&nbsp;
-		                   				 <a href="./pages/wedding-reception.html">Wedding & Reception</a>&nbsp;
+		                   				 <a href="./pages/wedding-reception.html">Wedding Ceremony &amp; Reception</a>&nbsp;
 		                			</li>
 											</ul>
 										</nav>
@@ -57,18 +56,6 @@
 <div class="12u">
     <section>
             <div class="row">
-                <div class="4u">
-                    <section class="box">
-                        <header>
-                           <h1><a href="./pages/about-us.html">About Us</a>&nbsp;</h1>
-                        </header>
-                                <a href="./pages/about-us.html" class="image image-full"><img src="http://via.placeholder.com/300x300"></a>
-                        <p>A quick bit about Kate &amp; Elena</p>
-                        <footer class="actions">
-                            <a href="./pages/about-us.html" class="button button-icon button-icon-1">Continue Reading</a>
-                        </footer>
-                    </section>
-                </div>
                 <div class="4u">
                     <section class="box">
                         <header>
@@ -93,20 +80,20 @@
                         </footer>
                     </section>
                 </div>
-            </div>
-            <div class="row">
                 <div class="4u">
                     <section class="box">
                         <header>
-                           <h1><a href="./pages/wedding-reception.html">Wedding & Reception</a>&nbsp;</h1>
+                           <h1><a href="./pages/wedding-reception.html">Wedding Ceremony &amp; Reception</a>&nbsp;</h1>
                         </header>
                                 <a href="./pages/wedding-reception.html" class="image image-full"><img src="http://via.placeholder.com/300x300"></a>
-                        <p>Where to find the wedding and reception, and what to expect.</p>
+                        <p class="first last">Where to find the wedding events, and what to expect.</p>
+
                         <footer class="actions">
                             <a href="./pages/wedding-reception.html" class="button button-icon button-icon-1">Continue Reading</a>
                         </footer>
                     </section>
                 </div>
+            </div>
     </section><!-- /#content -->
 </div>
 </div>
