--- a/output/pages/about-us.html
+++ b/output/pages/about-us.html
@@ -35,10 +35,9 @@
 										<nav id="nav">
 											<ul>
  													<li>
-		                   				 <a href="../pages/about-us.html">About Us</a>&nbsp;
 		                   				 <a href="../pages/wedding-registry.html">Wedding Registry</a>&nbsp;
 		                   				 <a href="../pages/rsvp.html">RSVP</a>&nbsp;
-		                   				 <a href="../pages/wedding-reception.html">Wedding & Reception</a>&nbsp;
+		                   				 <a href="../pages/wedding-reception.html">Wedding Ceremony &amp; Reception</a>&nbsp;
 		                			</li>
 											</ul>
 										</nav>
@@ -62,15 +61,15 @@
 						<div class="12u skel-cell-mainContent">
 							<!-- Content -->
 								<article class="box is-post">
-									<a href="#" class="image image-full"><img src="/images/kate_sofa.jpg"/></a>
-									<p><img alt="pic of me" src="../images/kate_sofa.jpg"></p>
+									<a href="#" class="image image-full"><img src=""/></a>
+									<p><img alt="pic of me" src="http://via.placeholder.com/300x300"></p>
 <h1>Katherine Louise Reeher</h1>
 <p><a href="">twitter</a>
 <a href="">instagram</a>
 <a href="">facebook</a></p>
 <p>age: 27
 occupation: qa software engineer</p>
-<p><img alt="pic of imp" src="../images/imp_lacey.jpg"></p>
+<p><img alt="pic of imp" src="http://via.placeholder.com/300x300"></p>
 <h1>Candace Elena Palmer</h1>
 <p><a href="">twitter</a>
 <a href="">instagram</a>
