--- a/output/pages/rsvp.html
+++ b/output/pages/rsvp.html
@@ -35,10 +35,9 @@
 										<nav id="nav">
 											<ul>
  													<li>
-		                   				 <a href="../pages/about-us.html">About Us</a>&nbsp;
 		                   				 <a href="../pages/wedding-registry.html">Wedding Registry</a>&nbsp;
 		                   				 <a href="../pages/rsvp.html">RSVP</a>&nbsp;
-		                   				 <a href="../pages/wedding-reception.html">Wedding & Reception</a>&nbsp;
+		                   				 <a href="../pages/wedding-reception.html">Wedding Ceremony &amp; Reception</a>&nbsp;
 		                			</li>
 											</ul>
 										</nav>
@@ -63,7 +62,7 @@
 							<!-- Content -->
 								<article class="box is-post">
 									<a href="#" class="image image-full"><img src="/images/rsvp.jpg"/></a>
-									<p>google embed form here (see <a href="https://github.com/josh146/google_embed/">Google-Embed plugin</a>)</p>
+									<iframe src="https://docs.google.com/forms/d/e/1FAIpQLSek4_OZS3UCJ67iF6ce9A3x7ovW25MV8PsAQvlcAk45su2CmQ/viewform?embedded=true" width=100% height=800px frameborder="0" marginheight="0" marginwidth="0">Loading...</iframe>
 								</article>
 						</div>
 					</div>
