--- a/output/authors.html
+++ b/output/authors.html
@@ -35,10 +35,9 @@
 										<nav id="nav">
 											<ul>
  													<li>
-		                   				 <a href="./pages/about-us.html">About Us</a>&nbsp;
 		                   				 <a href="./pages/wedding-registry.html">Wedding Registry</a>&nbsp;
 		                   				 <a href="./pages/rsvp.html">RSVP</a>&nbsp;
-		                   				 <a href="./pages/wedding-reception.html">Wedding & Reception</a>&nbsp;
+		                   				 <a href="./pages/wedding-reception.html">Wedding Ceremony &amp; Reception</a>&nbsp;
 		                			</li>
 											</ul>
 										</nav>
