--- a/output/pages/wedding-registry.html
+++ b/output/pages/wedding-registry.html
@@ -35,10 +35,9 @@
 										<nav id="nav">
 											<ul>
  													<li>
-		                   				 <a href="../pages/about-us.html">About Us</a>&nbsp;
 		                   				 <a href="../pages/wedding-registry.html">Wedding Registry</a>&nbsp;
 		                   				 <a href="../pages/rsvp.html">RSVP</a>&nbsp;
-		                   				 <a href="../pages/wedding-reception.html">Wedding & Reception</a>&nbsp;
+		                   				 <a href="../pages/wedding-reception.html">Wedding Ceremony &amp; Reception</a>&nbsp;
 		                			</li>
 											</ul>
 										</nav>
@@ -62,8 +61,11 @@
 						<div class="12u skel-cell-mainContent">
 							<!-- Content -->
 								<article class="box is-post">
-									<a href="#" class="image image-full"><img src="/images/dog.jpg"/></a>
-									<p>Elena hates the idea of wedding registries!</p>
+									<a href="#" class="image image-full"><img src=""/></a>
+									<p>You can find us registered at:</p>
+<p><a href="https://www.amazon.com/wedding/share/reeher-palmer">Amazon</a></p>
+<p><a href="">Target</a></p>
+<p><a href="">Crate &amp; Barrel</a></p>
 								</article>
 						</div>
 					</div>
