--- a/output/tags.html
+++ b/output/tags.html
@@ -1,18 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head prefix="og: http://ogp.me/ns# article: http://ogp.me/ns/article#">
-    <meta charset="utf-8"/>
-    <meta name="viewport" content="width=device-width">
-    <title>Reeher-Palmer Wedding - Tags</title>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.4.1/css/bulma.min.css">
-    <link rel="stylesheet" href="./theme/css/main.f82c478c.css">
-  <link rel="stylesheet" href="./theme/webassets-external/4fded6ba7f78485cd1a1e8255ac1b491_print.css" media="print">
-<link rel="stylesheet" href="C:\Users\Kate Reeher\ownCloud\bulma\bulma.css">
-<!--[if IE]>
-<script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
-<![endif]-->
+<head prefix="og: http://ogp.me/ns# article: http://ogp.me/ns/article#">
+  <meta charset="utf-8"/>
+  <meta name="viewport" content="width=device-width">
+  <title>Reeher-Palmer Wedding - Tags</title>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.4.1/css/bulma.min.css">
+    <link rel="stylesheet" href="./theme/css/main.3e2dc287.css">
+    <link rel="stylesheet" href="./theme/webassets-external/b5ebb056f3c90c4c2f08b97c20c881f9_print.css" media="print">
 </head>
+
 <body id="index" class="home">
 <header class="hero is-primary">
   <div class="hero-head">
@@ -20,29 +17,31 @@
       <nav class="nav">
         <div class="nav-left">
           <a class="nav-item is-brand title is-3"
-        href="./">Reeher-Palmer Wedding</a>
-      </div>
-    </nav>
+             href="./">Reeher-Palmer Wedding</a>
+        </div>
+      </nav>
+    </div>
   </div>
-</div>
 </header>
+
 <nav class="nav has-shadow is-hidden-print">
-<div class="container">
-  <div class="nav-center"></div>
-  <span id="navToggle" class="nav-toggle">
-    <span></span>
-    <span></span>
-    <span></span>
-  </span>
-  <div id="navMenu" class="nav-right nav-menu">
-        <a class="nav-item is-tab "
-      href="./category/updates.html">updates</a>
-</div>
-</div>
+  <div class="container">
+    <div class="nav-center"></div>
+    <span id="navToggle" class="nav-toggle">
+      <span></span>
+      <span></span>
+      <span></span>
+    </span>
+    <div id="navMenu" class="nav-right nav-menu">
+          <a class="nav-item is-tab "
+             href="./category/updates.html">updates</a>
+    </div>
+  </div>
 </nav>
+
 <div class="container">
-<div class="section columns">
-<div class="column is-three-quarters-desktop is-two-thirds-tablet">
+  <div class="section columns">
+    <div class="column is-three-quarters-desktop is-two-thirds-tablet">
   <p class="subtitle">
     <span class="icon is-small"><i class="fa fa-tags"></i></span>
     Tags for Reeher-Palmer Wedding
@@ -52,47 +51,50 @@
     <ul class="menu-list">
     </ul>
   </div>
+    </div>
+
+    <div class="column is-one-quarter-desktop is-one-third-tablet is-hidden-print">
+      <aside class="menu">
+          <p class="menu-label">Other Pages</p>
+          <ul class="menu-list">
+                <li><a                        href="./pages/wedding-registry.html">
+                  <span class="icon is-small"><i class="fa fa-book"></i></span>
+                  <span class="link-text">Wedding Registry</span>
+                </a></li>
+                <li><a                        href="./pages/wedding-reception.html">
+                  <span class="icon is-small"><i class="fa fa-book"></i></span>
+                  <span class="link-text">Wedding Ceremony & Reception</span>
+                </a></li>
+                <li><a                        href="./pages/wedding-reception.html">
+                  <span class="icon is-small"><i class="fa fa-book"></i></span>
+                  <span class="link-text">Wedding Ceremony &amp; Reception</span>
+                </a></li>
+          </ul>
+      </aside>
+    </div>
+  </div>
 </div>
-<div class="column is-one-quarter-desktop is-one-third-tablet is-hidden-print">
-  <aside class="menu">
-      <p class="menu-label">Information:</p>
-      <ul class="menu-list">
-            <li><a             href="./pages/wedding-reception.html">
-            <span class="icon is-small"><i class="fa fa-book"></i></span>
-            <span class="link-text">Wedding Ceremony &amp; Reception</span>
-          </a></li>
-            <li><a             href="./pages/wedding-registry.html">
-            <span class="icon is-small"><i class="fa fa-book"></i></span>
-            <span class="link-text">Wedding Registry</span>
-          </a></li>
-            <li><a             href="./pages/rsvp.html">
-            <span class="icon is-small"><i class="fa fa-book"></i></span>
-            <span class="link-text">RSVP</span>
-          </a></li>
-    </ul>
-</aside>
-</div>
-</div>
-</div>
+
 <footer class="footer">
-<div class="container has-text-centered">
- <p class="subtitle">Join Us September 15, 2018</p><p><a href="https://github.com/textbook/bulrush">Bulrush</a> theme for
-<a href="https://blog.getpelican.com/">Pelican</a>
-| <span class="icon is-small"><i class="fa fa-html5"></i></span> HTML 5
-| <span class="icon is-small"><i class="fa fa-css3"></i></span> CSS 3
-</p>
-</div>
+  <div class="container has-text-centered">
+ <p class="subtitle">Join Us September 15, 2018</p>    <p><a href="https://github.com/textbook/bulrush">Bulrush</a> theme for
+        <a href="https://blog.getpelican.com/">Pelican</a>
+      | <span class="icon is-small"><i class="fa fa-html5"></i></span> HTML 5
+      | <span class="icon is-small"><i class="fa fa-css3"></i></span> CSS 3
+    </p>
+  </div>
 </footer>
+
 <script type="text/javascript">
-document.getElementById('navToggle').addEventListener('click', function () {
-var nav = document.getElementById('navMenu');
-var className = nav.getAttribute('class');
-if (className == 'nav-right nav-menu') {
-nav.className = 'nav-right nav-menu is-active';
-} else {
-nav.className = 'nav-right nav-menu';
-}
-});
+  document.getElementById('navToggle').addEventListener('click', function () {
+    var nav = document.getElementById('navMenu');
+    var className = nav.getAttribute('class');
+    if (className == 'nav-right nav-menu') {
+      nav.className = 'nav-right nav-menu is-active';
+    } else {
+      nav.className = 'nav-right nav-menu';
+    }
+  });
 </script>
 </body>
 </html>
