added themes as submodule

--- a/output/pages/photos.html
+++ b/output/pages/photos.html
@@ -71,7 +71,7 @@
                 </a></li>
                 <li><a                        href="../pages/wedding-reception.html">
                   <span class="icon is-small"><i class="fa fa-book"></i></span>
-                  <span class="link-text">Wedding Ceremony &amp; Reception</span>
+                  <span class="link-text">Wedding Ceremony & Reception</span>
                 </a></li>
           </ul>
       </aside>
