--- a/output/pages/about-us.html
+++ b/output/pages/about-us.html
@@ -84,7 +84,7 @@ occupation: software developer</p></div>
                 </a></li>
                 <li><a                        href="../pages/wedding-reception.html">
                   <span class="icon is-small"><i class="fa fa-book"></i></span>
-                  <span class="link-text">Wedding Ceremony &amp; Reception</span>
+                  <span class="link-text">Wedding Ceremony & Reception</span>
                 </a></li>
           </ul>
       </aside>
