--- a/output/pages/wedding-registry.html
+++ b/output/pages/wedding-registry.html
@@ -48,7 +48,8 @@
     <sidebar>
         <ul class="static-item">
                 <li><a href="http://localhost:8000">Home</a></li>
-                <li><a href="pages/wedding-reception.html">Wedding & Reception</a></li>
+                <li><a href="../pages/wedding-reception.html">Wedding & Reception</a></li>
+                <li><a href="../pages/wedding-registry.html">Registry</a></li>
 
         </ul>        
 
@@ -66,9 +67,11 @@
     
     <maincontent>
 <p>You can find us registered at:</p>
-<p><a href="https://www.amazon.com/wedding/share/reeher-palmer">Amazon</a></p>
-<p><a href="">Target</a></p>
-<p><a href="">Crate &amp; Barrel</a></p>
+<ul>
+<li><a href="https://www.amazon.com/wedding/share/reeher-palmer">Amazon</a></li>
+<li><a href="">Target</a></li>
+<li><a href="">Crate &amp; Barrel</a></li>
+</ul>
     </maincontent>
 
   <!-- Analytics -->
