--- a/output/authors.html
+++ b/output/authors.html
@@ -49,6 +49,7 @@
         <ul class="static-item">
                 <li><a href="http://localhost:8000">Home</a></li>
                 <li><a href="pages/wedding-reception.html">Wedding & Reception</a></li>
+                <li><a href="pages/wedding-registry.html">Registry</a></li>
 
         </ul>        
 
