--- a/output/pages/photos.html
+++ b/output/pages/photos.html
@@ -48,7 +48,8 @@
     <sidebar>
         <ul class="static-item">
                 <li><a href="http://localhost:8000">Home</a></li>
-                <li><a href="pages/wedding-reception.html">Wedding & Reception</a></li>
+                <li><a href="../pages/wedding-reception.html">Wedding & Reception</a></li>
+                <li><a href="../pages/wedding-registry.html">Registry</a></li>
 
         </ul>        
 
