--- a/output/pages/wedding-reception.html
+++ b/output/pages/wedding-reception.html
@@ -74,7 +74,26 @@ September 15th, 2018
 St. Mark's Episcopal Cathedral
 519 Oak Grove Street, Minneapolis, MN 55403</p>
 </blockquote>
-<div class="mapouter"><div class="gmap_canvas"><iframe width="400" height="300" id="gmap_canvas" src="https://maps.google.com/maps?q=519%20Oak%20Grove%20Street%2C%20Minneapolis%2C%20MN%2055403%2C%20United%20States&t=&z=14&ie=UTF8&iwloc=&output=embed" frameborder="0" scrolling="no" marginheight="0" marginwidth="0"></iframe>google maps <a href="http://www.pureblack.de/google-maps/">pure black</a></div><style>.mapouter{overflow:hidden;height:500px;width:600px;}.gmap_canvas {background:none!important;height:500px;width:600px;}</style></div>
+<style>
+    .google-maps {
+        position: relative;
+        padding-bottom: 75%; // This is the aspect ratio
+        height: 0;
+        overflow: hidden;
+    }
+    .google-maps iframe {
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100% !important;
+        height: 100% !important;
+        padding-bottom: 5%
+    }
+</style>
+
+<div class="google-maps">
+    <iframe src="https://maps.google.com/maps?q=519%20Oak%20Grove%20Street%2C%20Minneapolis%2C%20MN%2055403%2C%20United%20States&t=&z=14&ie=UTF8&iwloc=&output=embed" width="600" height="450" frameborder="0" style="border:0"></iframe>
+</div>
 
 <h2>Parking &amp; Construction:</h2>
 <p>The church's main parking lot is available at Oak Grove Street and 15th Street. For further details on parking, see <a href="https://ourcathedral.org/parking&gt;">St.Mark's website</a>.</p>
@@ -90,7 +109,9 @@ September 15th, 2018
 Bryant Lake Regional Park 
 6800 Rowland Road Eden Prairie, MN 55344 </p>
 </blockquote>
-<div class="mapouter"><div class="gmap_canvas"><iframe width="400" height="300" id="gmap_canvas" src="https://maps.google.com/maps?q=6800%20Rowland%20Road%20Eden%20Prairie%2C%20MN%2055344&t=&z=14&ie=UTF8&iwloc=&output=embed" frameborder="0" scrolling="no" marginheight="0" marginwidth="0"></iframe>google maps <a href="http://www.pureblack.de/google-maps/">pure black</a></div><style>.mapouter{overflow:hidden;height:500px;width:600px;}.gmap_canvas {background:none!important;height:500px;width:600px;}</style></div>
+<div class="google-maps">
+    <iframe src="https://maps.google.com/maps?q=6800%20Rowland%20Road%20Eden%20Prairie%2C%20MN%2055344&t=&z=14&ie=UTF8&iwloc=&output=embed" width="600" height="450" frameborder="0" style="border:0"></iframe>
+</div>
 
 <p>We are in both the pavilion and the waterside. There are paved trails from the parking lot at the main entrance to the pavilion, and down to the water. It is roughly {} miles from the parking lot to the pavilion.</p>
 <p>We plan on providing an array of lawn games and other amusements, but we have the site for the entire day-- feel free to wander off and enjoy the park! There are trails, a sandy beach, and other lovely things you are entirely welcome to spend some time exploring.</p>
