--- a/output/index.html
+++ b/output/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <!-- Site Meta Data -->
-  <title> Reeher-Palmer Wedding </title>
+  <title>Welcome!</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="description" content="">
   <meta name="author" content="Kate">
@@ -16,8 +16,8 @@
   <meta itemprop="description" content="">
 
   <!-- Style Meta Data -->
-  <link rel="stylesheet" href="./theme/css/milligram.css" type="text/css" />
-  <link rel="stylesheet" href="./theme/css/custom.css" type="text/css" />
+  <link rel="stylesheet" href="www.wedding.reeher-palmer.net/theme/css/milligram.css" type="text/css" />
+  <link rel="stylesheet" href="www.wedding.reeher-palmer.net/theme/css/custom.css" type="text/css" />
 
   <!-- Feed Meta Data -->
 
@@ -26,15 +26,15 @@
   <meta name="twitter:site" content="">
   <meta name="twitter:image" content="">
 
-  <meta name="twitter:creator" content="">
-  <meta name="twitter:url" content=".">
-  <meta name="twitter:title" content="Reeher-Palmer Wedding">
-  <meta name="twitter:description" content="">
+<meta name="twitter:creator" content="">
+<meta name="twitter:url" content="www.wedding.reeher-palmer.net/welcome.html">
+<meta name="twitter:title" content="Reeher-Palmer Wedding ~ Welcome!">
+<meta name="twitter:description" content="We&#39;re getting married!">
 
-  <!-- Facebook Meta Data -->
-  <meta property="og:title" content="Reeher-Palmer Wedding" />
-  <meta property="og:description" content="" />
-  <meta property="og:image" content="" />
+<!-- Facebook Meta Data -->
+<meta property="og:title" content="Reeher-Palmer Wedding ~ Welcome!" />
+<meta property="og:description" content="We&#39;re getting married!" />
+<meta property="og:image" content="" />
 </head>
 
 <body>
@@ -45,7 +45,7 @@
         <ul>
             <div>
                 <li>
-                    <a href="."><h3>Reeher-Palmer Wedding</h3></a>
+                    <a href="www.wedding.reeher-palmer.net"><h3>Reeher-Palmer Wedding</h3></a>
                 </li>
                 <li>
                 </li>
@@ -56,10 +56,6 @@
   <!-- Sidebar -->
     <sidebar>
         <ul class="static-item">
-                <li><a href="/">Home</a></li>
-                <li><a href="/pages/ceremony.html">Wedding Ceremony</a></li>
-                <li><a href="/pages/reception.html">Wedding Reception</a></li>
-                <li><a href="/pages/wedding-registry.html">Registry</a></li>
 
         </ul>        
 
@@ -76,9 +72,22 @@
     </sidebar>
     
     <maincontent>
+<h2>
+    <a href="www.wedding.reeher-palmer.net/welcome.html" rel="bookmark" title="Permalink to Welcome!">Welcome!</a>
+</h2>
 
+<div>
+<hr>
+</div>
 
-
+<div>
+    <mainarticle>
+    <p>Welcome! We're so glad you're here. On our website, you'll find information about all the festivities around our wedding, including times and dates, as well as locations and access information.</p>
+<p>We're so honored that you'll be celebrating this with us!</p>
+    </mainarticle>
+</div>
+<hr>
+        
     </maincontent>
 
   <!-- Analytics -->
