--- a/output/pages/about-us.html
+++ b/output/pages/about-us.html
@@ -16,8 +16,8 @@
   <meta itemprop="description" content="">
 
   <!-- Style Meta Data -->
-  <link rel="stylesheet" href="../theme/css/milligram.css" type="text/css" />
-  <link rel="stylesheet" href="../theme/css/custom.css" type="text/css" />
+  <link rel="stylesheet" href="www.wedding.reeher-palmer.net/theme/css/milligram.css" type="text/css" />
+  <link rel="stylesheet" href="www.wedding.reeher-palmer.net/theme/css/custom.css" type="text/css" />
 
   <!-- Feed Meta Data -->
 
@@ -35,10 +35,9 @@
         <ul>
             <div>
                 <li>
-                    <a href=".."><h3>Reeher-Palmer Wedding</h3></a>
+                    <a href="www.wedding.reeher-palmer.net"><h3>Reeher-Palmer Wedding</h3></a>
                 </li>
                 <li>
-                        <em><h6>Join Us September 15, 2018</h6></em>
                 </li>
             </div>
         </ul>
@@ -47,9 +46,6 @@
   <!-- Sidebar -->
     <sidebar>
         <ul class="static-item">
-                <li><a href="http://localhost:8000">Home</a></li>
-                <li><a href="../pages/wedding-reception.html">Wedding & Reception</a></li>
-                <li><a href="../pages/wedding-registry.html">Registry</a></li>
 
         </ul>        
 
@@ -66,6 +62,7 @@
     </sidebar>
     
     <maincontent>
+<div class="static-page-urls">
 <p><img alt="pic of me" src="http://via.placeholder.com/300x300"></p>
 <h1>Katherine Louise Reeher</h1>
 <p><a href="">twitter</a>
@@ -80,6 +77,7 @@ occupation: qa software engineer</p>
 <a href="">facebook</a></p>
 <p>age: 26
 occupation: software developer</p>
+</div>
     </maincontent>
 
   <!-- Analytics -->
