--- a/output/pages/photos.html
+++ b/output/pages/photos.html
@@ -16,8 +16,8 @@
   <meta itemprop="description" content="">
 
   <!-- Style Meta Data -->
-  <link rel="stylesheet" href="../theme/css/milligram.css" type="text/css" />
-  <link rel="stylesheet" href="../theme/css/custom.css" type="text/css" />
+  <link rel="stylesheet" href="www.wedding.reeher-palmer.net/theme/css/milligram.css" type="text/css" />
+  <link rel="stylesheet" href="www.wedding.reeher-palmer.net/theme/css/custom.css" type="text/css" />
 
   <!-- Feed Meta Data -->
 
@@ -35,10 +35,9 @@
         <ul>
             <div>
                 <li>
-                    <a href=".."><h3>Reeher-Palmer Wedding</h3></a>
+                    <a href="www.wedding.reeher-palmer.net"><h3>Reeher-Palmer Wedding</h3></a>
                 </li>
                 <li>
-                        <em><h6>Join Us September 15, 2018</h6></em>
                 </li>
             </div>
         </ul>
@@ -47,9 +46,6 @@
   <!-- Sidebar -->
     <sidebar>
         <ul class="static-item">
-                <li><a href="http://localhost:8000">Home</a></li>
-                <li><a href="../pages/wedding-reception.html">Wedding & Reception</a></li>
-                <li><a href="../pages/wedding-registry.html">Registry</a></li>
 
         </ul>        
 
@@ -66,9 +62,11 @@
     </sidebar>
     
     <maincontent>
+<div class="static-page-urls">
 <h1>Wedding Photos</h1>
 <h1>Reception Photos</h1>
 <p>If you'd like to add your photos to this page, please <a href="wedding@reeher-palmer.net">email us</a>!</p>
+</div>
     </maincontent>
 
   <!-- Analytics -->
