--- a/output/pages/rsvp.html
+++ b/output/pages/rsvp.html
@@ -16,8 +16,8 @@
   <meta itemprop="description" content="">
 
   <!-- Style Meta Data -->
-  <link rel="stylesheet" href="../theme/css/milligram.css" type="text/css" />
-  <link rel="stylesheet" href="../theme/css/custom.css" type="text/css" />
+  <link rel="stylesheet" href="www.wedding.reeher-palmer.net/theme/css/milligram.css" type="text/css" />
+  <link rel="stylesheet" href="www.wedding.reeher-palmer.net/theme/css/custom.css" type="text/css" />
 
   <!-- Feed Meta Data -->
 
@@ -35,10 +35,9 @@
         <ul>
             <div>
                 <li>
-                    <a href=".."><h3>Reeher-Palmer Wedding</h3></a>
+                    <a href="www.wedding.reeher-palmer.net"><h3>Reeher-Palmer Wedding</h3></a>
                 </li>
                 <li>
-                        <em><h6>Join Us September 15, 2018</h6></em>
                 </li>
             </div>
         </ul>
@@ -47,9 +46,6 @@
   <!-- Sidebar -->
     <sidebar>
         <ul class="static-item">
-                <li><a href="http://localhost:8000">Home</a></li>
-                <li><a href="../pages/wedding-reception.html">Wedding & Reception</a></li>
-                <li><a href="../pages/wedding-registry.html">Registry</a></li>
 
         </ul>        
 
@@ -66,7 +62,9 @@
     </sidebar>
     
     <maincontent>
+<div class="static-page-urls">
 <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSek4_OZS3UCJ67iF6ce9A3x7ovW25MV8PsAQvlcAk45su2CmQ/viewform?embedded=true" width=100% height=800px frameborder="0" marginheight="0" marginwidth="0">Loading...</iframe>
+</div>
     </maincontent>
 
   <!-- Analytics -->
