removed stray directory

--- a/output/index.html
+++ b/output/index.html
@@ -77,6 +77,15 @@
     
     <maincontent>
 
+    <ol>
+        <h3>Recent entries</h3>
+        <hr>
+        <li>
+            <h5><a href="./welcome.html" rel="bookmark" title="Permalink to Welcome!">Welcome!</a></h5>
+                <i><p>We're getting married!</p></i>
+            By:<a href="./author/kate.html">Kate</a><br />On:Fri 22 September 2017<br />In:<a href="./category/misc.html" rel="bookmark" title="Permalink to misc">misc</a>
+        </li>
+    </ol>
 
 
     </maincontent>
