--- a/output/pages/photos.html
+++ b/output/pages/photos.html
@@ -38,7 +38,6 @@
                     <a href=".."><h3>Reeher-Palmer Wedding</h3></a>
                 </li>
                 <li>
-                        <em><h6>Join Us September 15, 2018</h6></em>
                 </li>
             </div>
         </ul>
@@ -47,9 +46,10 @@
   <!-- Sidebar -->
     <sidebar>
         <ul class="static-item">
-                <li><a href="http://localhost:8000">Home</a></li>
-                <li><a href="../pages/wedding-reception.html">Wedding & Reception</a></li>
-                <li><a href="../pages/wedding-registry.html">Registry</a></li>
+                <li><a href="/">Home</a></li>
+                <li><a href="/pages/ceremony.html">Wedding Ceremony</a></li>
+                <li><a href="/pages/reception.html">Wedding Reception</a></li>
+                <li><a href="/pages/wedding-registry.html">Registry</a></li>
 
         </ul>        
 
@@ -66,9 +66,11 @@
     </sidebar>
     
     <maincontent>
+<div class="static-page-urls">
 <h1>Wedding Photos</h1>
 <h1>Reception Photos</h1>
 <p>If you'd like to add your photos to this page, please <a href="wedding@reeher-palmer.net">email us</a>!</p>
+</div>
     </maincontent>
 
   <!-- Analytics -->
