--- a/output/pages/wedding-registry.html
+++ b/output/pages/wedding-registry.html
@@ -38,7 +38,6 @@
                     <a href=".."><h3>Reeher-Palmer Wedding</h3></a>
                 </li>
                 <li>
-                        <em><h6>Join Us September 15, 2018</h6></em>
                 </li>
             </div>
         </ul>
@@ -47,9 +46,10 @@
   <!-- Sidebar -->
     <sidebar>
         <ul class="static-item">
-                <li><a href="http://localhost:8000">Home</a></li>
-                <li><a href="../pages/wedding-reception.html">Wedding & Reception</a></li>
-                <li><a href="../pages/wedding-registry.html">Registry</a></li>
+                <li><a href="/">Home</a></li>
+                <li><a href="/pages/ceremony.html">Wedding Ceremony</a></li>
+                <li><a href="/pages/reception.html">Wedding Reception</a></li>
+                <li><a href="/pages/wedding-registry.html">Registry</a></li>
 
         </ul>        
 
@@ -66,12 +66,14 @@
     </sidebar>
     
     <maincontent>
+<div class="static-page-urls">
 <p>You can find us registered at:</p>
 <ul>
 <li><a href="https://www.amazon.com/wedding/share/reeher-palmer">Amazon</a></li>
 <li><a href="">Target</a></li>
 <li><a href="">Crate &amp; Barrel</a></li>
 </ul>
+</div>
     </maincontent>
 
   <!-- Analytics -->
