--- a/output/pages/about-us.html
+++ b/output/pages/about-us.html
@@ -38,7 +38,6 @@
                     <a href=".."><h3>Reeher-Palmer Wedding</h3></a>
                 </li>
                 <li>
-                        <em><h6>Join Us September 15, 2018</h6></em>
                 </li>
             </div>
         </ul>
@@ -47,9 +46,10 @@
   <!-- Sidebar -->
     <sidebar>
         <ul class="static-item">
-                <li><a href="http://localhost:8000">Home</a></li>
-                <li><a href="../pages/wedding-reception.html">Wedding & Reception</a></li>
-                <li><a href="../pages/wedding-registry.html">Registry</a></li>
+                <li><a href="/">Home</a></li>
+                <li><a href="/pages/ceremony.html">Wedding Ceremony</a></li>
+                <li><a href="/pages/reception.html">Wedding Reception</a></li>
+                <li><a href="/pages/wedding-registry.html">Registry</a></li>
 
         </ul>        
 
@@ -66,6 +66,7 @@
     </sidebar>
     
     <maincontent>
+<div class="static-page-urls">
 <p><img alt="pic of me" src="http://via.placeholder.com/300x300"></p>
 <h1>Katherine Louise Reeher</h1>
 <p><a href="">twitter</a>
@@ -80,6 +81,7 @@ occupation: qa software engineer</p>
 <a href="">facebook</a></p>
 <p>age: 26
 occupation: software developer</p>
+</div>
     </maincontent>
 
   <!-- Analytics -->
