--- a/output/pages/rsvp.html
+++ b/output/pages/rsvp.html
@@ -38,7 +38,6 @@
                     <a href=".."><h3>Reeher-Palmer Wedding</h3></a>
                 </li>
                 <li>
-                        <em><h6>Join Us September 15, 2018</h6></em>
                 </li>
             </div>
         </ul>
@@ -47,9 +46,10 @@
   <!-- Sidebar -->
     <sidebar>
         <ul class="static-item">
-                <li><a href="http://localhost:8000">Home</a></li>
-                <li><a href="../pages/wedding-reception.html">Wedding & Reception</a></li>
-                <li><a href="../pages/wedding-registry.html">Registry</a></li>
+                <li><a href="/">Home</a></li>
+                <li><a href="/pages/ceremony.html">Wedding Ceremony</a></li>
+                <li><a href="/pages/reception.html">Wedding Reception</a></li>
+                <li><a href="/pages/wedding-registry.html">Registry</a></li>
 
         </ul>        
 
@@ -66,7 +66,9 @@
     </sidebar>
     
     <maincontent>
+<div class="static-page-urls">
 <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSek4_OZS3UCJ67iF6ce9A3x7ovW25MV8PsAQvlcAk45su2CmQ/viewform?embedded=true" width=100% height=800px frameborder="0" marginheight="0" marginwidth="0">Loading...</iframe>
+</div>
     </maincontent>
 
   <!-- Analytics -->
