--- a/output/welcome.html
+++ b/output/welcome.html
@@ -48,7 +48,6 @@
                     <a href="."><h3>Reeher-Palmer Wedding</h3></a>
                 </li>
                 <li>
-                        <em><h6>Join Us September 15, 2018</h6></em>
                 </li>
             </div>
         </ul>
@@ -57,9 +56,10 @@
   <!-- Sidebar -->
     <sidebar>
         <ul class="static-item">
-                <li><a href="http://localhost:8000">Home</a></li>
-                <li><a href="pages/wedding-reception.html">Wedding & Reception</a></li>
-                <li><a href="pages/wedding-registry.html">Registry</a></li>
+                <li><a href="/">Home</a></li>
+                <li><a href="/pages/ceremony.html">Wedding Ceremony</a></li>
+                <li><a href="/pages/reception.html">Wedding Reception</a></li>
+                <li><a href="/pages/wedding-registry.html">Registry</a></li>
 
         </ul>        
 
@@ -81,11 +81,7 @@
 </h2>
 
 <div>
-    <b>By: </b><a href="./author/kate.html">Kate</a><b>    On: </b>Fri 22 September 2017<br />
-    <b>In: </b><a href="./category/updates.html" rel="bookmark" title="Permalink to updates">updates</a><br />
-    <em><b>Tags: </b>
-    </em>
-    <hr>
+<hr>
 </div>
 
 <div>
@@ -95,18 +91,6 @@
     </mainarticle>
 </div>
 <hr>
-        
-<div>
-        <i>If you found the article helpful, please share or cite the article, and spread the word:</i>
-            <p style="margin-top: 2%;">
-                <span><a target="_blank" rel="nofollow" onclick="javascript:window.open(this.href, '', 'menubar=no,toolbar=no,resizable=yes,scrollbars=yes,height=400,width=700');return false;" title="Twitter" href="https://twitter.com/share?url=./welcome.html&text=Welcome!&via="><img class="social-icons-a" src="./theme/images/icons/twitter.png"></a></span>
-                <span><a target="_blank" title="Facebook" rel="nofollow" onclick="javascript:window.open(this.href, '', 'menubar=no,toolbar=no,resizable=yes,scrollbars=yes,height=500,width=700');return false;" href="https://www.facebook.com/sharer.php?u=./welcome.html&t=Welcome!"><img class="social-icons-a" src="./theme/images/icons/facebook.png"></a></span>
-
-                <a  target="_blank" title="Linkedin" href="https://www.linkedin.com/shareArticle?mini=true&url=./welcome.html&title=Welcome!" rel="nofollow" onclick="javascript:window.open(this.href, '', 'menubar=no,toolbar=no,resizable=yes,scrollbars=yes,height=450,width=650');return false;"><img class="social-icons-a" src="./theme/images/icons/linkedin.png"></a>
-            </p>
-</div>
-<hr>
-    <p><i>For any feedback or corrections, please write in to: </i><b> Kate </b></p>
         
     </maincontent>
 
