--- a/output/pages/reception-pre.html
+++ b/output/pages/reception-pre.html
@@ -20,6 +20,7 @@
   <link rel="stylesheet" href="../theme/css/custom.css" type="text/css" />
 
   <!-- Feed Meta Data -->
+    <link href="../feeds/all.atom.xml" type="application/atom+xml" rel="alternate" title="Reeher-Palmer Wedding ATOM Feed" />
 
   <!-- Twitter Feed -->
   <meta name="twitter:card" content="summary">
@@ -64,6 +65,8 @@
         <p> 
         </p>
         <p>
+            <a href="../feeds/all.atom.xml" rel="alternate">
+                <img class="social-icons-m" src="../theme/images/icons/rss.png"></a>
         </p>
         <p>
         </p>
