changed up the color scheme

--- a/output/pages/ceremony.html
+++ b/output/pages/ceremony.html
@@ -20,7 +20,6 @@
   <link rel="stylesheet" href="../theme/css/custom.css" type="text/css" />
 
   <!-- Feed Meta Data -->
-    <link href="../feeds/all.atom.xml" type="application/atom+xml" rel="alternate" title="Reeher-Palmer Wedding ATOM Feed" />
 
   <!-- Twitter Feed -->
   <meta name="twitter:card" content="summary">
@@ -65,8 +64,6 @@
         <p> 
         </p>
         <p>
-            <a href="../feeds/all.atom.xml" rel="alternate">
-                <img class="social-icons-m" src="../theme/images/icons/rss.png"></a>
         </p>
         <p>
         </p>
@@ -74,28 +71,27 @@
     
     <maincontent>
 <div class="static-page-urls">
-<p>The wedding ceremony will be held at <a href="http://ourcathedral.org">St. Mark's Episcopal Cathedral</a>, Kate and Elena's home church. </p>
+<p>The wedding ceremony will be held at <a href="http://ourcathedral.org">St. Mark's Episcopal Cathedral</a>. </p>
 <!-- MarkdownTOC -->
 
 <ul>
-<li><a href="#ceremony-time-and-location">Ceremony Time And Location</a></li>
-<li><a href="#parking--construction">Parking &amp; Construction:</a></li>
+<li><a href="#ceremony-location">Ceremony Location</a></li>
+<li><a href="#parking--construction">Parking &amp; Construction</a></li>
 <li><a href="#accessibility">Accessibility</a></li>
 </ul>
 <!-- /MarkdownTOC -->
 
-<p><a name="ceremony-time-and-location"></a></p>
-<h2>Ceremony Time And Location</h2>
+<p><a name="ceremony-location"></a></p>
+<h2>Ceremony Location</h2>
 <p>To enter the Cathedral, you can go up the stairs to enter the front of the Cathedral through the big main doors that face Oak Grove Street and Loring Park. Alternatively, you can enter through the office door on the east side of the building, off the parking lot and facing out to Oak Grove Street and Loring Park. This entry has many fewer stairs!</p>
 <hr>
 <p><a name="parking--construction"></a></p>
-<h2>Parking &amp; Construction:</h2>
-<p>The church's main parking lot is available at Oak Grove Street and 15th Street. For further details on parking, see <a href="https://ourcathedral.org/parking&gt;">St.Mark's website</a>.</p>
+<h2>Parking &amp; Construction</h2>
+<p>The church's main parking lot is available at Oak Grove Street and 15th Street. For further details on parking, see <a href="https://ourcathedral.org/parking">St.Mark's website</a>.</p>
 <p>We know of no construction that should be impacting your route at this time. </p>
 <p><a name="accessibility"></a></p>
 <h2>Accessibility</h2>
 <p>You can find a fuller description of St. Mark's accessibility on <a href="https://ourcathedral.org/accessibility">the Cathedral's website</a>. </p>
-<p>Please note, we will be providing large-print bulletins at the door for our wedding ceremony. </p>
 </div>
     </maincontent>
 
