--- a/output/pages/registry.html
+++ b/output/pages/registry.html
@@ -20,7 +20,6 @@
   <link rel="stylesheet" href="../theme/css/custom.css" type="text/css" />
 
   <!-- Feed Meta Data -->
-    <link href="../feeds/all.atom.xml" type="application/atom+xml" rel="alternate" title="Reeher-Palmer Wedding ATOM Feed" />
 
   <!-- Twitter Feed -->
   <meta name="twitter:card" content="summary">
@@ -65,8 +64,6 @@
         <p> 
         </p>
         <p>
-            <a href="../feeds/all.atom.xml" rel="alternate">
-                <img class="social-icons-m" src="../theme/images/icons/rss.png"></a>
         </p>
         <p>
         </p>
@@ -77,8 +74,8 @@
 <p>You can find us registered at:</p>
 <ul>
 <li><a href="https://www.amazon.com/wedding/share/reeher-palmer">Amazon</a></li>
-<li><a href="">Target</a></li>
-<li><a href="">Crate &amp; Barrel</a></li>
+<li><a href="https://www.target.com/gift-registry/giftgiver?registryId=830333f884694ddfa55df8b4890ada9c&amp;type=WEDDING">Target</a></li>
+<li><a href="https://food52.com/shop/registry/2735-candace-elena-and-kate">Food52</a></li>
 </ul>
 </div>
     </maincontent>
