--- a/output/pages/reception.html
+++ b/output/pages/reception.html
@@ -20,7 +20,6 @@
   <link rel="stylesheet" href="../theme/css/custom.css" type="text/css" />
 
   <!-- Feed Meta Data -->
-    <link href="../feeds/all.atom.xml" type="application/atom+xml" rel="alternate" title="Reeher-Palmer Wedding ATOM Feed" />
 
   <!-- Twitter Feed -->
   <meta name="twitter:card" content="summary">
@@ -65,8 +64,6 @@
         <p> 
         </p>
         <p>
-            <a href="../feeds/all.atom.xml" rel="alternate">
-                <img class="social-icons-m" src="../theme/images/icons/rss.png"></a>
         </p>
         <p>
         </p>
@@ -74,31 +71,25 @@
     
     <maincontent>
 <div class="static-page-urls">
-<h1>Reception</h1>
+<h2>Reception</h2>
 <p>The reception will follow the wedding ceremony at <a href="https://threeriversparks.org/location/bryant-lake-regional-park">Bryant Lake Regional Park</a>.</p>
 <!-- MarkdownTOC -->
 
 <ul>
-<li><a href="#reception-time--location">Reception Time &amp; Location</a></li>
+<li><a href="#reception-location">Reception Location</a></li>
 <li><a href="#menu">Menu</a></li>
 </ul>
 <!-- /MarkdownTOC -->
 
-<p><a name="reception-time--location"></a></p>
-<p><a name="reception-time--location"></a></p>
-<h2>Reception Time &amp; Location</h2>
-<hr>
-<div class="google-maps">
-    <iframe src="https://maps.google.com/maps?q=6800%20Rowland%20Road%20Eden%20Prairie%2C%20MN%2055344&t=&z=14&ie=UTF8&iwloc=&output=embed" width="600" height="450" frameborder="0" style="border:0"></iframe>
-</div>
-
+<p><a name="reception-location"></a></p>
+<h3>Reception Location</h3>
 <hr>
 <p>We are in both the pavilion and the waterside. There are paved trails from the parking lot at the main entrance to the pavilion, and down to the water. It is roughly {} miles from the parking lot to the pavilion.</p>
 <p>We plan on providing an array of lawn games and other amusements, but we have the site for the entire day-- feel free to wander off and enjoy the park! There are trails, a sandy beach, and other lovely things you are entirely welcome to spend some time exploring.</p>
 <p>This is an outdoor reception, so we might encounter weather. In case of light rain, we will remain under the pavilion. In case of thunder or snowstorms, we will be relocating to a rain site. </p>
 <p>There is a restroom available at the pavilion. </p>
 <p><a name="menu"></a></p>
-<h2>Menu</h2>
+<h3>Menu</h3>
 <p>The menu is not yet set, but <strong>there will</strong> be vegan, vegetarian, and gluten-free dining options. These options will also not just be a side salad! </p>
 <p>We will be serving pork but will have non-pork options as well. </p>
 <p>We will have a wide array of drinks, including various sodas, sparkling waters, and still water. We will be serving beer and wine. </p>
