playing with theme

--- a/output/index.html
+++ b/output/index.html
@@ -20,6 +20,7 @@
   <link rel="stylesheet" href="./theme/css/custom.css" type="text/css" />
 
   <!-- Feed Meta Data -->
+    <link href="./feeds/all.atom.xml" type="application/atom+xml" rel="alternate" title="Reeher-Palmer Wedding ATOM Feed" />
 
   <!-- Twitter Feed -->
   <meta name="twitter:card" content="summary">
@@ -56,10 +57,10 @@
   <!-- Sidebar -->
     <sidebar>
         <ul class="static-item">
-                <li><a href="http://localhost:8000">Home</a></li>
-                <li><a href="http://localhost:8000/pages/ceremony.html">Wedding Ceremony</a></li>
-                <li><a href="http://localhost:8000/pages/reception.html">Wedding Reception</a></li>
-                <li><a href="http://localhost:8000/pages/registry.html">Wedding Registry</a></li>
+                <li><a href="http://wedding.reeher-palmer.net">Home</a></li>
+                <li><a href="http://wedding.reeher-palmer.net/pages/ceremony.html">Wedding Ceremony</a></li>
+                <li><a href="http://wedding.reeher-palmer.net/pages/reception.html">Wedding Reception</a></li>
+                <li><a href="http://wedding.reeher-palmer.net/pages/registry.html">Wedding Registry</a></li>
 
         </ul>        
 
@@ -74,6 +75,8 @@
         <p> 
         </p>
         <p>
+            <a href="./feeds/all.atom.xml" rel="alternate">
+                <img class="social-icons-m" src="./theme/images/icons/rss.png"></a>
         </p>
         <p>
         </p>
