--- a/output/index.html
+++ b/output/index.html
@@ -6,7 +6,6 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <link rel="shortcut icon" href="./theme/images/favicon.ico"/>
         <link rel="stylesheet" href="./theme/css/main.css" type="text/css" />
-        <link href="http://wedding.reeher-palmer.net/feeds/all.atom.xml" type="application/atom+xml" rel="alternate" title="Reeher-Palmer Wedding Atom Feed" />
 
         <!--[if IE]>
                 <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script><![endif]-->
@@ -99,6 +98,12 @@
         <br/>
         <br/>
           <p>We're so excited for you to join us in celebrating our wedding! </p>
+<p>Most of the wedding celebrations will be in St. Paul, aside from the <a href="./pages/ceremony.html">ceremony</a>. It's easy to get to and from the Minneapolis-St Paul airport by <a href="https://www.google.com/maps/dir/mears+park/Minneapolis%E2%88%92Saint+Paul+International+Airport+(MSP),+Minnesota/@44.9139745,-93.2251643,12z/data=!3m1!4b1!4m14!4m13!1m5!1m1!1s0x87f7d55006bba4bd:0xdf8eb2ec1b6ff687!2m2!1d-93.0879916!2d44.9493376!1m5!1m1!1s0x87f62f2a85c06a07:0x2bd3d37c78783591!2m2!1d-93.2222846!2d44.8847554!3e3?hl=en">public transit</a>. Several nearby hotels include:</p>
+<ul>
+<li><a href="https://www.saintpaulhotel.com/">The Saint Paul Hotel</a></li>
+<li><a href="http://doubletree3.hilton.com/en/hotels/minnesota/doubletree-by-hilton-hotel-st-paul-downtown-MSPMSDT/index.html">Hilton DoubleTree</a></li>
+<li><a href="https://www.ihg.com/holidayinn/hotels/us/en/st-paul/mspal/hoteldetail">St. Paul Downtown Holiday Inn</a></li>
+</ul>
         </div><!-- /.entry-content -->
 
       </article>
